GNOME Bugzilla – Bug 754582
Glib cannot compile
Last modified: 2015-09-07 17:11:42 UTC
gliststore.c:337:3: error: void function 'g_list_store_sort' should not return a value [-Wreturn-type] g_return_val_if_fail (compare_func != NULL, 0); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../glib/gmessages.h:388:3: note: expanded from macro 'g_return_val_if_fail' return (val); \ ^ ~~~~~
Wow! That was a fast bug fix! However, after applying the fix to gsequence.c I am still getting the error in gio/gliststore.c as mentioned above? Should the above be g_return_val_if_fail( compare_func != NULL ); ? Thanks, Partha
I meant to say g_return_if_fail( compare_func != NULL );
See commit 4a09d0cf7a65cd08d4156eafd80e943712216d49 Author: Ting-Wei Lan <lantw@src.gnome.org> Date: Wed Sep 2 01:19:40 2015 +0800 Fix return value error in g_list_store_sort