list store: Fix a parameter check

Getting this wrong causes build failures.

https://bugzilla.gnome.org/show_bug.cgi?id=754582